tests/fail/invalid_values.stderr
error: could not generate sine wave for `rate` of 8000 Hz and `frequency` of 5000 Hz
 --> tests/fail/invalid_values.rs:9:51
  |
9 |     let _wave = sine_wave!(rate: 8000, frequency: 5000);
  |                                                   ^^^^
